--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,23 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.hackathon-header {
+  text-align: left;
+  padding: 7%;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.hackathon-text {
+  padding: 0.7rem;
+  border-radius: 25px;
+  border: #61dafb 1px solid;
 }
 
 .App-link {
@@ -30,4 +43,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.h1 {
+  text-align: center;
 }
