--- a/src/App.css
+++ b/src/App.css
@@ -17,16 +17,32 @@
 }
 
 .hackathon-header {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
   text-align: left;
   padding: 7%;
   font-size: 1rem;
   margin-bottom: 1rem;
 }
 
-.hackathon-text {
-  padding: 0.7rem;
+.project-number {
+  width: fit-content;
+  margin: 0.2rem;
+  padding-left: 0.6rem;
+  padding-right: 0.6rem;
+  padding-bottom: 0.2rem;
   border-radius: 25px;
-  border: #61dafb 1px solid;
+  background-color: #61dafb;
+  color: #282c34;
+}
+
+.hackathon-text {
+  font-size: x-large;
+  margin-left: 0.2rem;
+  margin-bottom: 0.2rem;
+  /* border-radius: 25px;
+  border: #61dafb 1px solid; */
 }
 
 .App-link {
