--- a/src/styles/itemComponent.module.css
+++ b/src/styles/itemComponent.module.css
@@ -4,5 +4,5 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
-    color:aquamarine
+    color:aquamarine;
 }
