--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,22 @@
 .App {
   text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  align-items: center;
 }
 
 .App-header {
   background-color: #282c34;
+  height: 40vh;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-items: center;
   color: white;
+}
+
+.tasks {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .hackathon-header {
@@ -21,7 +24,8 @@
   flex-direction: column;
   width: fit-content;
   text-align: left;
-  padding: 7%;
+  padding-left: 7%;
+  padding-top: 7%;
   font-size: 1rem;
   margin-bottom: 1rem;
 }
@@ -60,4 +64,49 @@
 
 .h1 {
   text-align: center;
+  justify-content: start;
 }
+
+.h2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  justify-content: start;
+}
+
+.active-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 40vw;
+}
+
+.completed-list {
+  display: flex;
+  flex-direction: column;
+  width: 40vw;
+}
+
+.add-button {
+  text-align: start;
+  padding: 0.5rem;
+  width: 60%;
+  border:#282c34 3px dashed;
+  border-radius: 8px;
+  font-weight: bold;  
+  color: #282c34;
+  margin: 0.5rem;
+}
+
+.add-button:hover {
+  background-color: #a6aebf;
+}
+
+.add-button:active {
+  background-color: #282c34;
+  color: #61dafb;
+}
+
+
