--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 .App-header {
   background-color: #282c34;
-  height: 40vh;
+  height: 30vh;
   display: flex;
   flex-direction: column;
   justify-items: center;
@@ -24,8 +24,8 @@
   flex-direction: column;
   width: fit-content;
   text-align: left;
-  padding-left: 7%;
-  padding-top: 7%;
+  padding-left: 3%;
+  padding-top: 2%;
   font-size: 1rem;
   margin-bottom: 1rem;
 }
@@ -76,11 +76,34 @@
   justify-content: start;
 }
 
+.tasks {
+  display: flex;
+  align-items: flex-start;
+}
+
 .active-list {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   width: 40vw;
+}
+
+.active-tasks {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: flex-start;
+  width: 100%;
+  /* height:40vh; */
+}
+
+.completed-tasks { 
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: flex-start;
+  width: 40vw;
+  /* height:40vh; */
 }
 
 .completed-list {
@@ -109,4 +132,26 @@
   color: #61dafb;
 }
 
+.title-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
+.clear-button {
+    background-color: #58121c;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 0.5rem;
+    margin: 1.0rem 0;
+}
+
+.mark-button {
+  background-color: #12582f;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem;
+  margin: 1.0rem 0;
+}
