--- a/src/styles/itemComponent.module.css
+++ b/src/styles/itemComponent.module.css
@@ -1,8 +1,16 @@
-.item-row {
+.task-component {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
-    color:aquamarine;
+    width: 100%;
+    height: 50px;
+    padding: 0 10px;
+    border-bottom: 1px solid #ccc;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.title {
+    text-align: left;
 }
