--- a/src/styles/itemComponent.module.css
+++ b/src/styles/itemComponent.module.css
@@ -12,5 +12,20 @@
 }
 
 .title {
+    width: 80vw;
     text-align: left;
+    padding-left: 1%;
+}
+
+.description {
+    width: 100vw;
+    text-align: left;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    width: fit-content;
 }
